Multiple fixes: - Column count was off by 1. - "Options" button transform into "Save", to make it clear that clicking the button will save the options. - Do not return to input when click "Restore defaults", because the user may want to undo the Restore using, for example, CTRL+Z. Instead, focus on "Save" button. - Remove 'class' attribute instead of just emptying it. - Function "go()" does not seem to need parameters as it is called only once. - More unique cache manifest name "uglifyjs-online.appcache". - Fix .header overlapping .in-container - General formatting.

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html, body {
 	font: 100%/1.5 Arial, sans-serif;
 }
 
-.masthead {
+.header {
 	min-height: 4em;
 }
 
@@ -30,14 +30,14 @@ h1 {
 .in-container, #out-container {
 	position: relative;
 	height: 26em;
-	height: -moz-calc( 100% - 8em );
-	height: -webkit-calc( 100% - 8em );
-	height: calc( 100% - 8em );
+	height: -moz-calc( 100% - 9em );
+	height: -webkit-calc( 100% - 9em );
+	height: calc( 100% - 9em );
 	margin-bottom: 0.25em;
 }
 
 .in-container, #info, #out-container, #error-container {
-	margin-top: 4em;
+	margin-top: 5em;
 	margin-left: 1em;
 }
 
